Spawn tabs according to position/ overlap hgappens overlap happens but i wont fix it :]

--- a/Angular/frontend/src/app/pages/Table/final-table/final-table.component.scss
+++ b/Angular/frontend/src/app/pages/Table/final-table/final-table.component.scss
@@ -1,9 +1,9 @@
-.spawnTable2 {
+.spawnTable1 {
   width: 1000px;
   height: 485px;
 }
 
-#user2 {
+#user1 {
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
   -o-transform: rotate(90deg);
@@ -14,13 +14,13 @@
   left: -220px;
 }
 
-#user1 {
+#user0 {
   position: absolute;
   bottom: 0px;
   right: 0px;
 }
 
-.spawnTable1 {
-  width: 1000px;
-  height: 585px;
+.spawnTable0 {
+  height: 485px;
+  width: 1585px;
 }
